Handle the interuption of WiFi connection in ipynb files for downloading data

--- a/notebooks-blds/blds-download-export-data-ver2.ipynb
+++ b/notebooks-blds/blds-download-export-data-ver2.ipynb
@@ -33,7 +33,9 @@
     "import json\n",
     "import os\n",
     "import requests\n",
-    "import glob"
+    "import glob\n",
+    "from tqdm import tqdm\n",
+    "import time"
    ]
   },
   {
@@ -190,17 +192,21 @@
     "# define the user input\n",
     "\n",
     "while True:\n",
-    "    try:\n",
-    "        user_d_spec = int(input(f\"Which data do you want to download?\\\n",
-    "                            Enter {geojson_dic}\"\n",
-    "                                ))\n",
-    "    except ValueError:\n",
-    "        print(\"Please enter a number.\")\n",
-    "        continue\n",
-    "    if user_d_spec not in range(len(geojson_dic)):\n",
-    "        print(f\"Please enter {len(geojson_dic.keys())}\")\n",
-    "        continue\n",
-    "    break\n",
+    "    if bool(geojson_dic):\n",
+    "        try:\n",
+    "            user_d_spec = int(input(f\"Which data do you want to download?\\\n",
+    "                                Enter {geojson_dic}\"\n",
+    "                                    ))\n",
+    "        except ValueError:\n",
+    "            print(\"Please enter a number.\")\n",
+    "            continue\n",
+    "        if user_d_spec not in range(len(geojson_dic)):\n",
+    "            print(f\"Please enter {len(geojson_dic.keys())}\")\n",
+    "            continue\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Geojson_dic is empty, restart the kernel, please.\")\n",
+    "        break\n",
     "\n",
     "while True:\n",
     "    try:\n",
@@ -264,53 +270,92 @@
     "    for value in parameters.values():\n",
     "        assert value != \"\", \"Please provide values for the parameters\"\n",
     "\n",
-    "    response = requests.post(url, data=parameters, headers=headers)\n",
-    "    response.raise_for_status()  # Raise an Exception if HTTP Status Code is not 200\n",
+    "    while True:\n",
+    "        try:\n",
+    "            response = requests.post(url, data=parameters, headers=headers)\n",
+    "            response.raise_for_status()  # Raise an Exception if HTTP Status Code is not 200\n",
     "\n",
-    "    # print(\"Response:\")\n",
-    "    # print(desired_geojson_structure[\"features\"][0][\"properties\"][\"NAME_EN\"])\n",
-    "    # print(json.dumps(response.json(), indent=4))  # Pretty print response\n",
+    "            # print(\"Response:\")\n",
+    "            # print(desired_geojson_structure[\"features\"][0][\"properties\"][\"NAME_EN\"])\n",
+    "            # print(json.dumps(response.json(), indent=4))  # Pretty print response\n",
     "\n",
-    "    result = response.json()[\"groupByResult\"]\n",
+    "            result = response.json()[\"groupByResult\"]\n",
     "\n",
-    "    for state in result:\n",
-    "        state[\"groupByObject\"][0] = desired_geojson_structure[\"features\"][0][\"properties\"][\"NAME_EN\"]\n",
+    "            for state in result:\n",
+    "                state[\"groupByObject\"][0] = desired_geojson_structure[\"features\"][0][\"properties\"][\"NAME_EN\"]\n",
     "\n",
-    "    return result\n",
+    "            return result\n",
+    "        \n",
+    "        except requests.exceptions.RequestException:\n",
+    "            # Wi-Fi connection error occurred, wait for connection to be restored\n",
+    "            print(\"Waiting for Wi-Fi connection to be restored...\")\n",
+    "            time.sleep(5)  # Wait for 5 seconds\n",
+    "            continue  # Continue to the next iteration of the loop\n",
+    "\n",
+    "# londer version of the function\n",
+    "# def connect_feat_data(feature, data):\n",
+    "\n",
+    "#     # Find the relevant value in data\n",
+    "#     rem_value_to_add = None\n",
+    "#     for elem in data:\n",
+    "#         if elem['groupByObject'][1] == 'remainder':\n",
+    "#             for result in elem['result']:\n",
+    "#                 if result['timestamp'] == '2023-01-01T00:00:00Z':\n",
+    "#                     rem_value_to_add = result['value']\n",
+    "#                     break\n",
+    "#             break\n",
+    "\n",
+    "\n",
+    "#     ai_value_to_add = None\n",
+    "#     for elem in data:\n",
+    "#         if elem['groupByObject'][1] == 'source=microsoft/BuildingFootprints':\n",
+    "#             for result in elem['result']:\n",
+    "#                 if result['timestamp'] == '2023-01-01T00:00:00Z':\n",
+    "#                     ai_value_to_add = result['value']\n",
+    "#                     break\n",
+    "#             break\n",
+    "#     # return value_to_add\n",
+    "\n",
+    "\n",
+    "#     blds_total = None\n",
+    "#     blds_total = rem_value_to_add + ai_value_to_add\n",
+    "\n",
+    "#     # Calculate the AI percentage\n",
+    "#     ai_percentage = None\n",
+    "#     ai_percentage = (ai_value_to_add / (ai_value_to_add + rem_value_to_add)) * 100\n",
+    "    \n",
+    "#     # Add the value to the properties of feature\n",
+    "#     if rem_value_to_add is not None:\n",
+    "#         feature['properties']['mm_blds_2023'] = rem_value_to_add\n",
+    "\n",
+    "#     if ai_value_to_add is not None:\n",
+    "#         feature['properties']['ai_blds_2023'] = ai_value_to_add\n",
+    "\n",
+    "#     if blds_total is not None:\n",
+    "#         feature['properties']['blds_total'] = blds_total\n",
+    "\n",
+    "#     if ai_percentage is not None:\n",
+    "#         feature['properties']['ai_percentage'] = ai_percentage\n",
+    "\n",
+    "#     return feature\n",
     "\n",
     "\n",
     "def connect_feat_data(feature, data):\n",
     "\n",
-    "    # Find the relevant value in data\n",
     "    rem_value_to_add = None\n",
+    "    ai_value_to_add = None\n",
+    "\n",
     "    for elem in data:\n",
     "        if elem['groupByObject'][1] == 'remainder':\n",
-    "            for result in elem['result']:\n",
-    "                if result['timestamp'] == '2023-01-01T00:00:00Z':\n",
-    "                    rem_value_to_add = result['value']\n",
-    "                    break\n",
-    "            break\n",
+    "            rem_value_to_add = find_value(elem, '2023-01-01T00:00:00Z')\n",
+    "        elif elem['groupByObject'][1] == 'source=microsoft/BuildingFootprints':\n",
+    "            ai_value_to_add = find_value(elem, '2023-01-01T00:00:00Z')\n",
     "\n",
+    "    blds_total = rem_value_to_add + ai_value_to_add\\\n",
+    "        if rem_value_to_add is not None and ai_value_to_add is not None else None\n",
+    "    ai_percentage = (ai_value_to_add / (ai_value_to_add + rem_value_to_add)) * 100\\\n",
+    "        if rem_value_to_add is not None and ai_value_to_add is not None else None\n",
     "\n",
-    "    ai_value_to_add = None\n",
-    "    for elem in data:\n",
-    "        if elem['groupByObject'][1] == 'source=microsoft/BuildingFootprints':\n",
-    "            for result in elem['result']:\n",
-    "                if result['timestamp'] == '2023-01-01T00:00:00Z':\n",
-    "                    ai_value_to_add = result['value']\n",
-    "                    break\n",
-    "            break\n",
-    "    # return value_to_add\n",
-    "\n",
-    "\n",
-    "    blds_total = None\n",
-    "    blds_total = rem_value_to_add + ai_value_to_add\n",
-    "\n",
-    "    # Calculate the AI percentage\n",
-    "    ai_percentage = None\n",
-    "    ai_percentage = (ai_value_to_add / (ai_value_to_add + rem_value_to_add)) * 100\n",
-    "    \n",
-    "    # Add the value to the properties of feature\n",
     "    if rem_value_to_add is not None:\n",
     "        feature['properties']['mm_blds_2023'] = rem_value_to_add\n",
     "\n",
@@ -326,11 +371,19 @@
     "    return feature\n",
     "\n",
     "\n",
+    "def find_value(elem, timestamp):\n",
+    "    for result in elem['result']:\n",
+    "        if result['timestamp'] == timestamp:\n",
+    "            return result['value']\n",
+    "    return None\n",
+    "\n",
+    "\n",
     "def return_json_data():\n",
     "\n",
     "    data = []\n",
     "\n",
-    "    for i, feature in enumerate(bpolys[\"features\"][0:2]):\n",
+    "    features = bpolys[\"features\"]\n",
+    "    for i, feature in tqdm(enumerate(features), total=len(features)):\n",
     "\n",
     "        obtained_data = data_gen(feature)\n",
     "        # print(data)\n",
@@ -342,7 +395,9 @@
     "def return_geojson_data():\n",
     "\n",
     "    data = []\n",
-    "    for i, feature in enumerate(bpolys[\"features\"][0:2]):\n",
+    "\n",
+    "    features = bpolys[\"features\"]\n",
+    "    for i, feature in tqdm(enumerate(features), total=len(features)):\n",
     "\n",
     "        obtained_data = data_gen(feature)\n",
     "        # print(data)\n",
@@ -367,7 +422,7 @@
     "def export_data_as_geojson(name, data):\n",
     "\n",
     "    # Define the filename for the GeoJSON file\n",
-    "    filename = f'test_{name}.geojson'\n",
+    "    filename = f'{name}.geojson'\n",
     "\n",
     "    # Create a FeatureCollection from the structure\n",
     "    feature_collection = {\n",
@@ -433,7 +488,41 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  6%|▌         | 3/53 [02:40<30:53, 37.07s/it]   "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 25%|██▍       | 13/53 [10:49<24:31, 36.78s/it]  "
+     ]
+    }
+   ],
    "source": [
     "json_data = []\n",
     "geojson_data = []\n",
@@ -450,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
