Add indicators and ipynb files to process them

--- a/notebooks-blds/blds-plot-figure-1-beta.ipynb
+++ b/notebooks-blds/blds-plot-figure-1-beta.ipynb
@@ -45,7 +45,7 @@
     "# get the directory with downloaded data\n",
     "os.chdir(\"..\")\n",
     "home_dir = os.getcwd()\n",
-    "data_dir = os.path.join(home_dir, \"downloaded-data\")\n"
+    "data_dir = os.path.join(home_dir, \"downloaded-data-json\")\n"
    ]
   },
   {
@@ -267,7 +267,7 @@
     "def data_spec(data_dic):\n",
     "    \n",
     "    try:\n",
-    "        with open(f\"downloaded-data\\\\{data_dic[user_d_spec]}\", \"r\") as f:\n",
+    "        with open(f\"downloaded-data-json\\\\{data_dic[user_d_spec]}\", \"r\") as f:\n",
     "            data = json.load(f)\n",
     "        return data\n",
     "    except Exception as e:\n",
