--- a/notebooks-blds/blds-plot-figure-1.ipynb
+++ b/notebooks-blds/blds-plot-figure-1.ipynb
@@ -94,7 +94,7 @@
     "def data_spec(data_dic):\n",
     "    \n",
     "    try:\n",
-    "        with open(f\"downloaded-data\\\\{data_dic}\", \"r\") as f:\n",
+    "        with open(f\"downloaded-data-json\\\\{data_dic}\", \"r\") as f:\n",
     "            data = json.load(f)\n",
     "        return data\n",
     "    except Exception as e:\n",
