--- a/notebooks-blds/blds-rel-abs-numbers-states-figure-3.ipynb
+++ b/notebooks-blds/blds-rel-abs-numbers-states-figure-3.ipynb
@@ -96,7 +96,7 @@
     "def data_spec(data_dic):\n",
     "\n",
     "    try:\n",
-    "        with open(f\"downloaded-data\\\\{data_dic[user_d_spec]}\", \"r\") as f:\n",
+    "        with open(f\"downloaded-data-json\\\\{data_dic[user_d_spec]}\", \"r\") as f:\n",
     "            data = json.load(f)\n",
     "        return data\n",
     "    except Exception as e:\n",
