Add ipynb files to download numbers of roads in region/hexagrid

--- a/notebooks-roads/roads-download-export-data-ver2.ipynb
+++ b/notebooks-roads/roads-download-export-data-ver2.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download the buildings data"
+    "# Download the roads data"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question: How many buildings were mapped with RapID (Microsoft buildings) in selected region?"
+    "Question: How many m/km of roads were mapped with RapID in selected region?"
    ]
   },
   {
@@ -112,33 +112,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_geojson_names():\n",
-    "\n",
-    "#     # os.chdir('..')\n",
-    "#     home_dir = os.getcwd()\n",
-    "#     geojson_dir = os.path.join(home_dir, f\"geojson-regions\", \"\")\n",
-    "\n",
-    "#     geojson_names = []\n",
-    "#     for root, dirs, files in os.walk(geojson_dir):\n",
-    "#         for file in files:\n",
-    "#             if file.endswith('.geojson'):\n",
-    "#                 file_path = os.path.join(root, file)\n",
-    "#                 file_name = os.path.splitext(os.path.basename(file_path))[1]\n",
-    "#                 geojson_names.append(file_name)\n",
-    "#         # geojson_names.extend(file_names)\n",
-    "#     print(geojson_names)\n",
-    "#     return geojson_names\n",
-    "\n",
-    "\n",
-    "# geojson_names = get_geojson_names()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -164,23 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary is not empty\n"
+     ]
+    }
+   ],
    "source": [
-    "# define the dictinaries\n",
-    "\n",
-    "# data_dic = {0: \"blds_continent-states_18-23_ai\",\n",
-    "#             1: \"blds_africa-states_18-23_ai\",\n",
-    "#             2: \"blds_northamerica-states_18-23_ai\",\n",
-    "#             3: \"blds_europe-states_18-23_ai\",\n",
-    "#             4: \"blds_asia-states_18-23_ai\", }\n",
-    "\n",
-    "# geojson_dic = {0: \"geojson-continent-states\",\n",
-    "#                       1: \"geojson-africa-states\",\n",
-    "#                       2: \"geojson-northamerica-states\",\n",
-    "#                       3: \"geojson-europe-states\",\n",
-    "#                       4: \"geojson-asia-states\",}"
+    "if bool(geojson_dic):\n",
+    "    print(\"Dictionary is not empty\")"
    ]
   },
   {
@@ -254,18 +224,23 @@
     "    desired_geojson_structure = convert_geojson_structure(feature)\n",
     "\n",
     "    parameters = {\n",
-    "        # pass GeoJSON as string.\n",
-    "        \"bpolys\": json.dumps(desired_geojson_structure),\n",
-    "        \"filter\": \"building=* and building!=no and geometry:polygon\",\n",
+    "        \"bpolys\": json.dumps(bpolys),  # pass GeoJSON as string.\n",
+    "        \"filter\": \"type: way and (highway in (motorway,\\\n",
+    "                                              motorway_link, trunk, trunk_link,\\\n",
+    "                                              primary, primary_link, secondary,\\\n",
+    "                                              secondary_link, tertiary,\\\n",
+    "                                              tertiary_link, unclassified,\\\n",
+    "                                              residential, living_street, pedestrian, footway, cycleway, track, path)\\\n",
+    "                                  or (highway=service and service=alley))\",\n",
     "        \"groupByKey\": \"source\",\n",
-    "        \"groupByValues\": \"microsoft/BuildingFootprints\",\n",
+    "        \"groupByValues\": \"maxar\",\n",
     "        \"format\": \"json\",\n",
     "        \"time\": \"2018-01-01/2023-01-01/P1Y\",\n",
-    "        }\n",
+    "    }\n",
     "    headers = {\n",
     "        \"accept\": \"application/json\",\n",
     "        \"Content-Type\": \"application/x-www-form-urlencoded\",\n",
-    "        }\n",
+    "    }\n",
     "\n",
     "    for value in parameters.values():\n",
     "        assert value != \"\", \"Please provide values for the parameters\"\n",
@@ -348,7 +323,7 @@
     "    for elem in data:\n",
     "        if elem['groupByObject'][1] == 'remainder':\n",
     "            rem_value_to_add = find_value(elem, '2023-01-01T00:00:00Z')\n",
-    "        elif elem['groupByObject'][1] == 'source=microsoft/BuildingFootprints':\n",
+    "        elif elem['groupByObject'][1] == 'source=maxar':\n",
     "            ai_value_to_add = find_value(elem, '2023-01-01T00:00:00Z')\n",
     "\n",
     "    blds_total = rem_value_to_add + ai_value_to_add\\\n",
@@ -357,13 +332,13 @@
     "        if rem_value_to_add is not None and ai_value_to_add is not None else None\n",
     "\n",
     "    if rem_value_to_add is not None:\n",
-    "        feature['properties']['mm_blds_2023'] = rem_value_to_add\n",
+    "        feature['properties']['mm_roads_2023'] = rem_value_to_add\n",
     "\n",
     "    if ai_value_to_add is not None:\n",
-    "        feature['properties']['ai_blds_2023'] = ai_value_to_add\n",
+    "        feature['properties']['ai_roads_2023'] = ai_value_to_add\n",
     "\n",
     "    if blds_total is not None:\n",
-    "        feature['properties']['blds_total'] = blds_total\n",
+    "        feature['properties']['roads_total'] = blds_total\n",
     "\n",
     "    if ai_percentage is not None:\n",
     "        feature['properties']['ai_percentage'] = ai_percentage\n",
@@ -412,7 +387,7 @@
     "\n",
     "\n",
     "def export_data_as_json(name, data):\n",
-    "    with open(f\"downloaded-data-json\\\\{name}.json\", \"w\") as file:\n",
+    "    with open(f\"downloaded-data-json\\\\roads_{name}.json\", \"w\") as file:\n",
     "        json.dump(data, file, indent=4)\n",
     "\n",
     "\n",
@@ -422,7 +397,7 @@
     "def export_data_as_geojson(name, data):\n",
     "\n",
     "    # Define the filename for the GeoJSON file\n",
-    "    filename = f'{name}.geojson'\n",
+    "    filename = f'roads_{name}.geojson'\n",
     "\n",
     "    # Create a FeatureCollection from the structure\n",
     "    feature_collection = {\n",
