Edit Readme.md - add detailed workflow of ipynb files and add blds-indicators.pynb

--- a/notebooks-blds/blds-download-export-data-ver2.ipynb
+++ b/notebooks-blds/blds-download-export-data-ver2.ipynb
@@ -75,7 +75,8 @@
        " 'geojson-asia-states',\n",
        " 'geojson-continent-states',\n",
        " 'geojson-europe-states',\n",
-       " 'geojson-northamerica-states']"
+       " 'geojson-northamerica-states',\n",
+       " 'geojson-world-states']"
       ]
      },
      "execution_count": 3,
@@ -149,7 +150,8 @@
        " 1: 'geojson-asia-states',\n",
        " 2: 'geojson-continent-states',\n",
        " 3: 'geojson-europe-states',\n",
-       " 4: 'geojson-northamerica-states'}"
+       " 4: 'geojson-northamerica-states',\n",
+       " 5: 'geojson-world-states'}"
       ]
      },
      "execution_count": 5,
@@ -249,6 +251,23 @@
     "\n",
     "    return new_dict\n",
     "\n",
+    "# append desired properties\n",
+    "def append_properties(result, desired_geojson_structure):\n",
+    "\n",
+    "    desired_properties = [\"ADM0_ISO\", \"SOVEREIGNT\",\n",
+    "                          \"TYPE\", \"ADMIN\", \"GEOUNIT\", \"NAME\", \"NE_ID\",\n",
+    "                          \"POP_EST\", \"POP_RANK\", \"POP_YEAR\", \"GDP_MD\", \"GDP_YEAR\",\n",
+    "                          \"ECONOMY\", \"INCOME_GRP\", \"CONTINENT\", \"REGION_UN\", \"SUBREGION\", \"REGION_WB\"]\n",
+    "    \n",
+    "    for region in result:\n",
+    "        region[\"groupByObject\"][0] = desired_geojson_structure[\"features\"][0][\"properties\"][\"NAME_EN\"]\n",
+    "\n",
+    "\n",
+    "        for property in desired_properties:\n",
+    "            region[\"groupByObject\"].append(desired_geojson_structure[\"features\"][0][\"properties\"][property])\n",
+    "\n",
+    "    return result\n",
+    "\n",
     "def data_gen(feature):\n",
     "\n",
     "    desired_geojson_structure = convert_geojson_structure(feature)\n",
@@ -258,7 +277,7 @@
     "        \"bpolys\": json.dumps(desired_geojson_structure),\n",
     "        \"filter\": \"building=* and building!=no and geometry:polygon\",\n",
     "        \"groupByKey\": \"source\",\n",
-    "        \"groupByValues\": \"microsoft/BuildingFootprints\",\n",
+    "        \"groupByValues\": \"microsoft/BuildingFootprints,esri/Google_Africa_Buildings\",\n",
     "        \"format\": \"json\",\n",
     "        \"time\": \"2018-01-01/2023-01-01/P1Y\",\n",
     "        }\n",
@@ -281,10 +300,16 @@
     "\n",
     "            result = response.json()[\"groupByResult\"]\n",
     "\n",
-    "            for state in result:\n",
-    "                state[\"groupByObject\"][0] = desired_geojson_structure[\"features\"][0][\"properties\"][\"NAME_EN\"]\n",
+    "            # for region in result:\n",
+    "            #   region[\"groupByObject\"][0] = desired_geojson_structure[\"features\"][0][\"properties\"][\"NAME_EN\"]\n",
     "\n",
-    "            return result\n",
+    "            #   region[\"groupByObject\"].append(desired_geojson_structure[\"features\"][0][\"properties\"][\"POP_EST\"])\n",
+    "\n",
+    "            fin_res = append_properties(result, desired_geojson_structure)\n",
+    "\n",
+    "\n",
+    "            # print(json.dumps(fin_res, indent=4))  # Pretty print response\n",
+    "            return fin_res\n",
     "        \n",
     "        except requests.exceptions.RequestException:\n",
     "            # Wi-Fi connection error occurred, wait for connection to be restored\n",
@@ -409,10 +434,8 @@
     "    return data\n",
     "\n",
     "# export the data\n",
-    "\n",
-    "\n",
     "def export_data_as_json(name, data):\n",
-    "    with open(f\"downloaded-data-json\\\\{name}.json\", \"w\") as file:\n",
+    "    with open(f\"downloaded-data-json\\\\blds_{name}.json\", \"w\") as file:\n",
     "        json.dump(data, file, indent=4)\n",
     "\n",
     "\n",
@@ -422,7 +445,7 @@
     "def export_data_as_geojson(name, data):\n",
     "\n",
     "    # Define the filename for the GeoJSON file\n",
-    "    filename = f'{name}.geojson'\n",
+    "    filename = f'blds_{name}.geojson'\n",
     "\n",
     "    # Create a FeatureCollection from the structure\n",
     "    feature_collection = {\n",
@@ -493,33 +516,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  6%|▌         | 3/53 [02:40<30:53, 37.07s/it]   "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n",
-      "Waiting for Wi-Fi connection to be restored...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|██▍       | 13/53 [10:49<24:31, 36.78s/it]  "
+      "100%|██████████| 209/209 [1:48:59<00:00, 31.29s/it]   \n"
      ]
     }
    ],
@@ -539,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -604,14 +601,116 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2018-01-01T00:00:00Z</td>\n",
+       "      <td>11987966.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2019-01-01T00:00:00Z</td>\n",
+       "      <td>24924151.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2020-01-01T00:00:00Z</td>\n",
+       "      <td>26423299.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2021-01-01T00:00:00Z</td>\n",
+       "      <td>30570946.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2022-01-01T00:00:00Z</td>\n",
+       "      <td>36251876.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3727</th>\n",
+       "      <td>Scarborough Shoal</td>\n",
+       "      <td>source=esri/Google_Africa_Buildings</td>\n",
+       "      <td>2019-01-01T00:00:00Z</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3728</th>\n",
+       "      <td>Scarborough Shoal</td>\n",
+       "      <td>source=esri/Google_Africa_Buildings</td>\n",
+       "      <td>2020-01-01T00:00:00Z</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3729</th>\n",
+       "      <td>Scarborough Shoal</td>\n",
+       "      <td>source=esri/Google_Africa_Buildings</td>\n",
+       "      <td>2021-01-01T00:00:00Z</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3730</th>\n",
+       "      <td>Scarborough Shoal</td>\n",
+       "      <td>source=esri/Google_Africa_Buildings</td>\n",
+       "      <td>2022-01-01T00:00:00Z</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3731</th>\n",
+       "      <td>Scarborough Shoal</td>\n",
+       "      <td>source=esri/Google_Africa_Buildings</td>\n",
+       "      <td>2023-01-01T00:00:00Z</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3732 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [feature, source, timestamp, value]\n",
-       "Index: []"
+       "                feature                               source  \\\n",
+       "0             Indonesia                            remainder   \n",
+       "1             Indonesia                            remainder   \n",
+       "2             Indonesia                            remainder   \n",
+       "3             Indonesia                            remainder   \n",
+       "4             Indonesia                            remainder   \n",
+       "...                 ...                                  ...   \n",
+       "3727  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
+       "3728  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
+       "3729  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
+       "3730  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
+       "3731  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
+       "\n",
+       "                 timestamp       value  \n",
+       "0     2018-01-01T00:00:00Z  11987966.0  \n",
+       "1     2019-01-01T00:00:00Z  24924151.0  \n",
+       "2     2020-01-01T00:00:00Z  26423299.0  \n",
+       "3     2021-01-01T00:00:00Z  30570946.0  \n",
+       "4     2022-01-01T00:00:00Z  36251876.0  \n",
+       "...                    ...         ...  \n",
+       "3727  2019-01-01T00:00:00Z         0.0  \n",
+       "3728  2020-01-01T00:00:00Z         0.0  \n",
+       "3729  2021-01-01T00:00:00Z         0.0  \n",
+       "3730  2022-01-01T00:00:00Z         0.0  \n",
+       "3731  2023-01-01T00:00:00Z         0.0  \n",
+       "\n",
+       "[3732 rows x 4 columns]"
       ]
      },
      "execution_count": 15,
