--- a/notebooks-blds/blds-plot-figure-1-beta.ipynb
+++ b/notebooks-blds/blds-plot-figure-1-beta.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['blds_africa_states_18-23_ai.json', 'blds_continent_data_18-23_ai.json', 'blds_northamerica_states_18-23_ai.json', 'roads_africa_states_18-23_ai.json', 'roads_asia_states_18-23_ai.json', 'roads_continent_data_18-23_ai.json', 'roads_europe_states_18-23_ai.json']\n"
+      "['blds_africa_states_18-23_ai.json', 'blds_continent_data_18-23_ai.json', 'blds_northamerica_states_18-23_ai.json', 'roads_africa_states_18-23_ai.json', 'roads_asia_states_18-23_ai.json', 'roads_continent_data_18-23_ai.json', 'roads_europe_states_18-23_ai.json', 'test_blds_geojson-world-states.json']\n"
      ]
     },
     {
@@ -68,7 +68,7 @@
        " 2: 'blds_northamerica_states_18-23_ai.json'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,8 +330,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for cont in data:\n",
-    "    for dic1 in cont:\n",
+    "for region in data:\n",
+    "    for dic1 in region:\n",
     "        feature, source = dic1[\"groupByObject\"][0], dic1[\"groupByObject\"][1]\n",
     "        for res in dic1[\"result\"]:\n",
     "            d[\"feature\"].append(feature)\n",
